--- a/menu/templates/menu/main.html
+++ b/menu/templates/menu/main.html
@@ -8,6 +8,7 @@
         </div>
             <div class="w3-display-middle w3-center">
                 <span class="w3-text-white" style="font-size:100px"><br>Make Your Order</span>
+                <p><a href="{% url 'menu' %}" class="w3-button w3-xxlarge w3-black">Let me see the menu</a></p>
             </div>
     </div>
 {% endblock %}
