--- a/orders/templates/orders/create_person.html
+++ b/orders/templates/orders/create_person.html
@@ -7,22 +7,100 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+      
     <title>Give the amount to spent</title>
+    <style>
+      body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
+            .dropbtn1 {
+            background-color: rgb(26, 20, 20);
+            color: rgb(243, 236, 236);
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            }
+
+            .dropdown1 {
+            position: relative;
+            display: inline-block;
+            }
+
+            .dropdown1-content {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: white;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            }
+
+            .dropdown1-content a {
+            color: rgb(48, 44, 44);
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            }
+
+            .dropdown1-content a:hover {background-color: #080808;}
+
+            .dropdown1:hover .dropdown1-content {
+            display: block;
+            }
+
+            .dropdown1:hover .dropbtn1 {
+            background-color: white;
+            }        
+                    
+    </style>
+
+
+
   </head>
   <body>
 
-    {% if messages %}
-    {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}">
-            <a href="#" class="close" data-dismiss="alert">&times;</a>
-            {{ message }}
-        </div>
-    {% endfor %}
-    {% endif %}
 
+    <div id="home" class="w3-content">
 
+      <!-- Navbar (Sits on top) -->
+      <div class="w3-top w3-bar w3-xlarge w3-black w3-opacity-min", style="width: 980px;">
+      <a href="{% url 'menu' %}" class="w3-bar-item w3-button">MENU</a>
+          {% if user.is_authenticated %}
+              <a href="{% url 'user_info' %}" style="float:right">User: {{ user.get_username }}</a>
+              <a href="{% url 'logout' %}?next={{ request.path }}" class="w3-bar-item w3-button" style="float: right;">Logout</a>
+      
+          
+              {% if perms.orders.can_view_others_info %}
+              <a href="{% url 'create_person' %}" class="w3-bar-item w3-button">Define The Amount To Spent</a>
+              <a href="{% url 'users_info' %}" class="w3-bar-item w3-button">All Orders</a>
+              <a href="{% url 'daily_orders' %}" class="w3-bar-item w3-button">Today's Orders</a>
+              <a href="{% url 'weekly_orders' %}" class="w3-bar-item w3-button">This Week's Orders</a>
+              <a href="{% url 'create_menu' %}" class="w3-bar-item w3-button">Create Menu</a>
+              {% else %}
+              <a href="{% url 'check_previous_orders' %}" class="w3-bar-item w3-button">Check Previous Orders</a>
+              {% endif %}
+          {% else %}
+              <a href="{% url 'login' %}?next={{ request.path }}" class="w3-bar-item w3-button" style="float: right;">Login</a>
+          {% endif %} 
+      
+      
+      </div>
 
+    
+
+<div style="margin-top: 150px;">
+  
+  {% if messages %}
+  {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">
+          <a href="#" class="close" data-dismiss="alert">&times;</a>
+          {{ message }}
+      </div>
+  {% endfor %}
+  {% endif %}
 
 <form method="POST" action="{% url 'create_person' %}">
     {% csrf_token %}
@@ -45,7 +123,7 @@
     <button type="submit" class="btn btn-primary">Enter</button>
   </form>
 
-
+</div>
    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
