Add table ImagesSize to check if the limit is exceeded

--- a/menu/templates/menu/base.html
+++ b/menu/templates/menu/base.html
@@ -5,9 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://www.w3schools.com/lib/w3.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+
+        <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <style>
             body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
             .dropbtn1 {
@@ -72,13 +78,14 @@
         <a href="{% url 'daily_orders' %}" class="w3-bar-item w3-button">Today's Orders</a>
         <a href="{% url 'weekly_orders' %}" class="w3-bar-item w3-button">This Week's Orders</a>
         <a href="{% url 'create_menu' %}" class="w3-bar-item w3-button">Create Menu</a>
+            
         {% else %}
         <a href="{% url 'check_previous_orders' %}" class="w3-bar-item w3-button">Check Previous Orders</a>
         {% endif %}
     {% else %}
         <a href="{% url 'login' %}?next={{ request.path }}" class="w3-bar-item w3-button" style="float: right;">Login</a>
     {% endif %} 
-
+    
 
 </div>
 {% block content %}
@@ -86,6 +93,48 @@
 {% endblock %}
 
 
+
 </div>
+    {% if user.is_authenticated %}
+        {% if perms.orders.can_view_database_info %}
+                    {% if db_info.database_info %}
+                        
+                            <div class="container">                            
+                                <!-- The Modal -->
+                                <div class="modal" id="myModal">
+                                  <div class="modal-dialog">
+                                    <div class="modal-content">
+                                    
+                                      <!-- Modal Header -->
+                                      <div class="modal-header">
+                                        <h4 class="modal-title">Alert</h4>
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                      </div>
+                                      
+                                      <!-- Modal body -->
+                                      <div class="modal-body">
+                                        The Total Size Of Images Has Exeeded
+                                      </div>
+                                      
+                                      <!-- Modal footer -->
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                      </div>
+                                      
+                                    </div>
+                                  </div>
+                                </div>
+                                </div>
+                              </div>
+                    {% endif %}
+        {% endif %}
+    {% endif %}
+
+<script>
+    $(function() {
+  /* Or you can invoke the 'show' method programmatically */
+  $(".modal").modal("show");
+});
+</script>
 </body>
 </html>
