--- a/orders/templates/orders/weekly_orders.html
+++ b/orders/templates/orders/weekly_orders.html
@@ -18,7 +18,7 @@
         <div class="w3-container w3-white w3-padding-32">
                 
             {% for order in orders %}
-                <h1><b>{{ order.user.username }}</b><span class="w3-right w3-tag w3-dark-grey w3-round">${{ order.meal.name }}</span><span><p class="w3-text-grey">{{ order.meal.price }}</p></h1>
+                <h1><b>{{ order.user.username }}</b><span class="w3-right w3-tag w3-dark-grey w3-round">${{ order.meal.name }}</span><span><p class="w3-text-grey">${{ order.meal.price }}</p></h1>
                 <hr>
             {% endfor %}
         </div>
